# affordable-GPU-CI

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: _modal-gpu-tests.yml  ci_testing.yml  label-gpu-tests.yml  run-gpu-tests.yml
.modal/: README.md  test_runner.py
src/sample_pkg/: __about__.py  __init__.py  math_ops.py
tests/: test_math_ops.py
